@@ -1,226 +1,139 @@
-::
+@echo off
+setlocal
+
+if defined IGNITE_SCRIPT_STRICT_MODE (
+    setlocal EnableDelayedExpansion
+)
+
 :: Copyright 2019 GridGain Systems, Inc. and Contributors.
-::
 :: Licensed under the GridGain Community Edition License (the "License");
-:: you may not use this file except in compliance with the License.
+:: You may not use this file except in compliance with the License.
 :: You may obtain a copy of the License at
-::
-::     https://www.gridgain.com/products/software/community-edition/gridgain-community-edition-license
-::
+:: https://www.gridgain.com/products/software/community-edition/gridgain-community-edition-license
 :: Unless required by applicable law or agreed to in writing, software
 :: distributed under the License is distributed on an "AS IS" BASIS,
 :: WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 :: See the License for the specific language governing permissions and
 :: limitations under the License.
-::
-::
-:: Grid command line loader.
-::
 
-@echo off
-Setlocal EnableDelayedExpansion
-
-if "%OS%" == "Windows_NT"  setlocal
+:: Grid cluster control.
 
 :: Check JAVA_HOME.
-if defined JAVA_HOME  goto checkJdk
-    echo %0, ERROR:
-    echo JAVA_HOME environment variable is not found.
+if not defined JAVA_HOME (
+    echo ERROR: JAVA_HOME environment variable is not found.
     echo Please point JAVA_HOME variable to location of JDK 1.8 or later.
-    echo You can also download latest JDK at http://java.com/download.
-goto error_finish
-
-:checkJdk
-:: Check that JDK is where it should be.
-if exist "%JAVA_HOME%\bin\java.exe" goto checkJdkVersion
-    echo %0, ERROR:
-    echo JAVA is not found in JAVA_HOME=%JAVA_HOME%.
-    echo Please point JAVA_HOME variable to installation of JDK 1.8 or later.
-    echo You can also download latest JDK at http://java.com/download.
-goto error_finish
-
-:checkJdkVersion
-set cmd="%JAVA_HOME%\bin\java.exe"
-for /f "tokens=* USEBACKQ" %%f in (`%cmd% -version 2^>^&1`) do (
-    set var=%%f
-    goto :LoopEscape
+    echo You can also download the latest JDK at http://java.com/download.
+    goto :error_finish
 )
-:LoopEscape
 
-for /f "tokens=1-3  delims= " %%a in ("%var%") do set JAVA_VER_STR=%%c
-set JAVA_VER_STR=%JAVA_VER_STR:"=%
-
-for /f "tokens=1,2 delims=." %%a in ("%JAVA_VER_STR%.x") do set MAJOR_JAVA_VER=%%a& set MINOR_JAVA_VER=%%b
-if %MAJOR_JAVA_VER% == 1 set MAJOR_JAVA_VER=%MINOR_JAVA_VER%
-
-if %MAJOR_JAVA_VER% LSS 8 (
-    echo %0, ERROR:
-    echo The version of JAVA installed in %JAVA_HOME% is incorrect.
+:: Check that JDK is where it should be.
+if not exist "%JAVA_HOME%\bin\java.exe" (
+    echo ERROR: JAVA is not found in JAVA_HOME=%JAVA_HOME%.
     echo Please point JAVA_HOME variable to installation of JDK 1.8 or later.
-    echo You can also download latest JDK at http://java.com/download.
-    goto error_finish
+    echo You can also download the latest JDK at http://java.com/download.
+    goto :error_finish
 )
 
 :: Check IGNITE_HOME.
-:checkIgniteHome1
-if defined IGNITE_HOME goto checkIgniteHome2
-    pushd "%~dp0"/..
+if not defined IGNITE_HOME (
+    pushd "%~dp0\.."
     set IGNITE_HOME=%CD%
     popd
+)
 
-:checkIgniteHome2
 :: Strip double quotes from IGNITE_HOME
 set IGNITE_HOME=%IGNITE_HOME:"=%
 
-:: remove all trailing slashes from IGNITE_HOME.
-if %IGNITE_HOME:~-1,1% == \ goto removeTrailingSlash
-if %IGNITE_HOME:~-1,1% == / goto removeTrailingSlash
-goto checkIgniteHome3
+:: Remove all trailing slashes from IGNITE_HOME.
+:checkIgniteHome
+if "%IGNITE_HOME:~-1%"=="\" set IGNITE_HOME=%IGNITE_HOME:~0,-1%
+if "%IGNITE_HOME:~-1%"=="/" set IGNITE_HOME=%IGNITE_HOME:~0,-1%
+if "%IGNITE_HOME:~-1%"=="\" goto checkIgniteHome
+if "%IGNITE_HOME:~-1%"=="/" goto checkIgniteHome
 
-:removeTrailingSlash
-set IGNITE_HOME=%IGNITE_HOME:~0,-1%
-goto checkIgniteHome2
-
-:checkIgniteHome3
-if exist "%IGNITE_HOME%\config" goto checkIgniteHome4
-    echo %0, ERROR: Ignite installation folder is not found or IGNITE_HOME environment variable is not valid.
-    echo Please create IGNITE_HOME environment variable pointing to location of
+if not exist "%IGNITE_HOME%\config" (
+    echo ERROR: Ignite installation folder is not found or IGNITE_HOME environment variable is not valid.
+    echo Please create IGNITE_HOME environment variable pointing to the location of
     echo Ignite installation folder.
-    goto error_finish
+    goto :error_finish
+)
 
-:checkIgniteHome4
-
-::
-:: Set SCRIPTS_HOME - base path to scripts.
-::
 set SCRIPTS_HOME=%IGNITE_HOME%\bin
 
 :: Remove trailing spaces
-for /l %%a in (1,1,31) do if /i "%SCRIPTS_HOME:~-1%" == " " set SCRIPTS_HOME=%SCRIPTS_HOME:~0,-1%
+for /l %%a in (1,1,31) do if /i "%SCRIPTS_HOME:~-1%"==" " set SCRIPTS_HOME=%SCRIPTS_HOME:~0,-1%
 
-if /i "%SCRIPTS_HOME%\" == "%~dp0" goto setProgName
-    echo %0, WARN: IGNITE_HOME environment variable may be pointing to wrong folder: %IGNITE_HOME%
+:: Set SCRIPTS_HOME - base path to scripts.
+if /i "%SCRIPTS_HOME%\"=="%~dp0" goto setProgName
+    echo WARN: IGNITE_HOME environment variable may be pointing to the wrong folder: %IGNITE_HOME%
 
 :setProgName
-::
-:: Set program name.
-::
 set PROG_NAME=ignite.bat
-if "%OS%" == "Windows_NT" set PROG_NAME=%~nx0%
+if "%OS%"=="Windows_NT" set PROG_NAME=%~nx0%
 
-:run
+:: Determine Java version function
+:determineJavaVersion
+setlocal
+for /f "tokens=2 delims=[] " %%a in ('"java -version 2>&1 | findstr /i "version""') do set ver=%%a
+set ver=%ver:"=%
+for /f "tokens=1-2 delims=." %%a in ("%ver%") do (
+    set MAJOR=%%a
+    set MINOR=%%b
+)
+if "%MAJOR%"=="1" set MAJOR=%MINOR%
+endlocal & set JAVA_VERSION=%MAJOR%
 
-::
 :: Set IGNITE_LIBS
-::
 call "%SCRIPTS_HOME%\include\setenv.bat"
-call "%SCRIPTS_HOME%\include\build-classpath.bat"
 set CP=%IGNITE_LIBS%;%IGNITE_HOME%\libs\optional\ignite-zookeeper\*
 
-::
-:: Process 'restart'.
-::
-set RANDOM_NUMBER_COMMAND="!JAVA_HOME!\bin\java.exe" -cp %CP% org.apache.ignite.startup.cmdline.CommandLineRandomNumberGenerator
-for /f "usebackq tokens=*" %%i in (`!RANDOM_NUMBER_COMMAND!`) do set RANDOM_NUMBER=%%i
-
-set RESTART_SUCCESS_FILE="%IGNITE_HOME%\work\ignite_success_%RANDOM_NUMBER%"
-set RESTART_SUCCESS_OPT=-DIGNITE_SUCCESS_FILE=%RESTART_SUCCESS_FILE%
-
-::
-:: JVM options. See http://java.sun.com/javase/technologies/hotspot/vmoptions.jsp for more details.
-::
-:: ADD YOUR/CHANGE ADDITIONAL OPTIONS HERE
-::
-"%JAVA_HOME%\bin\java.exe" -version 2>&1 | findstr "1\.[7]\." > nul
-if %ERRORLEVEL% equ 0 (
-    if "%CONTROL_JVM_OPTS%" == "" set CONTROL_JVM_OPTS=-Xms256m -Xmx1g
-) else (
-    if "%CONTROL_JVM_OPTS%" == "" set CONTROL_JVM_OPTS=-Xms256m -Xmx1g
+:: JVM options.
+if not defined CONTROL_JVM_OPTS (
+    set CONTROL_JVM_OPTS=-Xms256m -Xmx1g
 )
 
-::
+:: Enable assertions if set.
+if "%ENABLE_ASSERTIONS%"=="1" (
+    set CONTROL_JVM_OPTS=%CONTROL_JVM_OPTS% -ea
+)
+
+:: Set main class to start service (grid node by default).
+if not defined MAIN_CLASS (
+    set MAIN_CLASS=org.apache.ignite.internal.commandline.CommandHandler
+)
+
 :: Uncomment to enable experimental commands [--wal]
-::
 :: set CONTROL_JVM_OPTS=%CONTROL_JVM_OPTS% -DIGNITE_ENABLE_EXPERIMENTAL_COMMAND=true
 
-::
 :: Uncomment the following GC settings if you see spikes in your throughput due to Garbage Collection.
-::
 :: set CONTROL_JVM_OPTS=%CONTROL_JVM_OPTS% -XX:+UseG1GC
 
-::
 :: Uncomment if you get StackOverflowError.
-:: On 64 bit systems this value can be larger, e.g. -Xss16m
-::
+:: On 64 bit systems, this value can be larger, e.g. -Xss16m
 :: set CONTROL_JVM_OPTS=%CONTROL_JVM_OPTS% -Xss4m
 
-::
 :: Uncomment to set preference to IPv4 stack.
-::
 :: set CONTROL_JVM_OPTS=%CONTROL_JVM_OPTS% -Djava.net.preferIPv4Stack=true
 
-::
-:: Assertions are disabled by default since version 3.5.
-:: If you want to enable them - set 'ENABLE_ASSERTIONS' flag to '1'.
-::
-set ENABLE_ASSERTIONS=1
-
-::
-:: Set '-ea' options if assertions are enabled.
-::
-if %ENABLE_ASSERTIONS% == 1 set CONTROL_JVM_OPTS=%CONTROL_JVM_OPTS% -ea
-
-:run_java
-
-::
-:: Set main class to start service (grid node by default).
-::
-
-if "%MAIN_CLASS%" == "" set MAIN_CLASS=org.apache.ignite.internal.commandline.CommandHandler
-
-::
-:: Remote debugging (JPDA).
-:: Uncomment and change if remote debugging is required.
-:: set CONTROL_JVM_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8787 %CONTROL_JVM_OPTS%
-::
-
-::
 :: Final CONTROL_JVM_OPTS for Java 9+ compatibility
-::
-call "%SCRIPTS_HOME%\include\jvmdefaults.bat" %MAJOR_JAVA_VER% "%CONTROL_JVM_OPTS%" CONTROL_JVM_OPTS
+if %JAVA_VERSION% GEQ 9 (
+    set CONTROL_JVM_OPTS=%CONTROL_JVM_OPTS% --illegal-access=warn
+    set CONTROL_JVM_OPTS=%CONTROL_JVM_OPTS% --add-opens=java.base/java.nio=ALL-UNNAMED
+)
 
 if defined JVM_OPTS (
     echo JVM_OPTS environment variable is set, but will not be used. To pass JVM options use CONTROL_JVM_OPTS
     echo JVM_OPTS=%JVM_OPTS%
 )
 
-if "%INTERACTIVE%" == "1" (
-    "%JAVA_HOME%\bin\java.exe" %CONTROL_JVM_OPTS% %QUIET% %RESTART_SUCCESS_OPT% ^
-    -DIGNITE_UPDATE_NOTIFIER=false -DIGNITE_HOME="%IGNITE_HOME%" -DIGNITE_PROG_NAME="%PROG_NAME%" %JVM_XOPTS% ^
-    -cp "%CP%" %MAIN_CLASS% %*
+:: Execute Java command based on OS
+set osname=%OS%
+if /i "%osname%"=="Windows_NT" (
+    "%JAVA_HOME%\bin\java.exe" %CONTROL_JVM_OPTS% %QUIET% -DIGNITE_HOME="%IGNITE_HOME%" -DIGNITE_PROG_NAME="%PROG_NAME%" %JVM_XOPTS% -cp "%CP%" %MAIN_CLASS% %*
 ) else (
-    "%JAVA_HOME%\bin\java.exe" %CONTROL_JVM_OPTS% %QUIET% %RESTART_SUCCESS_OPT% ^
-    -DIGNITE_UPDATE_NOTIFIER=false -DIGNITE_HOME="%IGNITE_HOME%" -DIGNITE_PROG_NAME="%PROG_NAME%" %JVM_XOPTS% ^
-    -cp "%CP%" %MAIN_CLASS% %*
+    "%JAVA_HOME%\bin\java.exe" %CONTROL_JVM_OPTS% %QUIET% -DIGNITE_HOME="%IGNITE_HOME%" -DIGNITE_PROG_NAME="%PROG_NAME%" %JVM_XOPTS% -cp "%CP%" %MAIN_CLASS% %*
 )
 
-set JAVA_ERRORLEVEL=%ERRORLEVEL%
-
-:: errorlevel 130 if aborted with Ctrl+c
-if %JAVA_ERRORLEVEL%==130 goto finish
-
-:: Exit if first run unsuccessful (Loader must create file).
-if not exist %RESTART_SUCCESS_FILE% goto error_finish
-del %RESTART_SUCCESS_FILE%
-
-goto run_java
-
-:finish
-if not exist %RESTART_SUCCESS_FILE% goto error_finish
-del %RESTART_SUCCESS_FILE%
-
 :error_finish
-
-if not "%NO_PAUSE%" == "1" pause
-
+if not "%NO_PAUSE%"=="1" pause
 goto :eof
